--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <h2>Git</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, accusamus facilis esse assumenda veniam cumque ipsum quisquam nemo deleniti magni, incidunt eum mollitia! Rerum a possimus explicabo vel eaque expedita.</p>
     </main>
+    <footer>
+        <h4>Clase de Git para CoderHouse</h4>
+    </footer>
 </body>
 </html>
