--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, accusamus facilis esse assumenda veniam cumque ipsum quisquam nemo deleniti magni, incidunt eum mollitia! Rerum a possimus explicabo vel eaque expedita.</p>
     </main>
     <footer>
-        <h4>Clase de Git para CoderHouse</h4>
+        <h4>Página de prueba</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam illum quam, saepe ipsam nulla repellat iure quibusdam beatae cupiditate quis aut. Aut omnis suscipit ex alias soluta aspernatur pariatur facere.</p>
     </footer>
 </body>
 </html>
