Borre contenido de footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </header>
     <main>
         <h2>Git</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, accusamus facilis esse assumenda veniam cumque ipsum quisquam nemo deleniti magni, incidunt eum mollitia! Rerum a possimus explicabo vel eaque expedita.</p>
+        <p>Lorem ipsum</p>
     </main>
     <footer>
         <h4>Página de prueba</h4>
